--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">walkie-stalkie</string>
+    <string name="title_activity_network">NetworkActivity</string>
+    <string name="facebook_app_id">458423981175344</string>
+    <string name="title_activity_login">LoginActivity</string>
+
 </resources>
